--- a/new/css/bloks/header.less
+++ b/new/css/bloks/header.less
@@ -21,9 +21,10 @@
 .nav_top {
     font-size: 1.5rem;
     display: flex;
-    height: 50px;
     li {
         list-style: none;
+        white-space:  nowrap;
+        height: 50px;
     }
 
     
