--- a/new/css/style.less
+++ b/new/css/style.less
@@ -2,7 +2,9 @@
   padding: 0;
 }
 @import "bloks/header";
-
+@import "bloks/footer";
+@import "bloks/l_sidebar";
+@import "bloks/content";
 html {
 	height: 100%;
 }
@@ -17,51 +19,26 @@ body {
 	max-width: 100%;
 	min-height: 100%;
 	height: auto !important;
-	height: 500px;
+    display: flex;
+    flex-direction: column;
+    background-color: #0eff20;
 }
 
 /* Middle
 -----------------------------------------------------------------------------*/
 .middle {
-	max-width: 1400px;
-	padding: 0 0 50px;
-    margin: 0 auto;
-	position: relative;
-    &:after {
-        display: table;
-        clear: both;
-        content: '';
-    }
+    display: flex;
+    align-content:flex-end;
+    flex: auto;
 }
 .container {
-	width: 100%;
-	float: left;
-	overflow: hidden;
-}
-.content {
-	padding: 0 0 0 270px;
-    text-align: justify;
-    text-indent: 2rem;
-    font-size: 1.5rem;
-    line-height: 1.8rem;
-}
-/* Left Sidebar
------------------------------------------------------------------------------*/
-.left-sidebar {
-	float: left;
-	width: 250px;
-	margin-left: -100%;
-	position: relative;
-	background: #B5E3FF;
-    height: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
+    background-color: #fff60e;
+    flex: auto;
+    display: flex;
 }
 
 
-/* Footer
------------------------------------------------------------------------------*/
-.footer {
-	margin: -50px auto 0;
-	height: 50px;
-	background: #BFF08E;
-	position: relative;
-}
+
+
