--- a/new/css/bloks/header.less
+++ b/new/css/bloks/header.less
@@ -20,25 +20,42 @@
 }
 .nav_top {
     font-size: 1.5rem;
-    display: flex;
-    li {
+    display: none;
+    flex-wrap: wrap;
+li {
         list-style: none;
         white-space:  nowrap;
         height: 50px;
     }
 
-    
     a {
         padding: 10px;
         margin: 10px 20px;
         text-decoration: none;
         border: 1px solid black;
-        background: #11f25f;
+        background: #a7f5c2;
         border-radius: 5px;
-        &:hover {
-          background: #a7f5c2; 
+        &:hover,
+        &:focus {
+          background: #4feb15; 
           padding: 10px 25px; 
           margin: 10px 5px;  
         }
     }
+}
+.mobil_menu {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: 1px solid black;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 30px;
+}
+.line {
+    width: 40px;
+    height: 4px;
+    background-color: #000;
+    margin: 3px auto;
 }
