--- a/new/css/style.css
+++ b/new/css/style.css
@@ -23,8 +23,8 @@
 }
 .nav_top {
   font-size: 1.5rem;
-  display: flex;
-  margin-bottom: 1.5rem;
+  display: none;
+  flex-wrap: wrap;
 }
 .nav_top li {
   list-style: none;
@@ -36,13 +36,30 @@
   margin: 10px 20px;
   text-decoration: none;
   border: 1px solid black;
-  background: #11f25f;
+  background: #a7f5c2;
   border-radius: 5px;
 }
-.nav_top a:hover {
-  background: #a7f5c2;
+.nav_top a:hover,
+.nav_top a:focus {
+  background: #4feb15;
   padding: 10px 25px;
   margin: 10px 5px;
+}
+.mobil_menu {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 30px;
+}
+.line {
+  width: 40px;
+  height: 4px;
+  background-color: #000;
+  margin: 3px auto;
 }
 /* Footer
 -----------------------------------------------------------------------------*/
@@ -57,7 +74,32 @@
 .left-sidebar {
   width: 500px;
   background: #B5E3FF;
-  height: inherit;
+}
+.nav_left {
+  flex-direction: column;
+  font-size: 1.5rem;
+  display: flex;
+}
+.nav_left li {
+  list-style: none;
+  white-space: nowrap;
+  margin-top: 20px;
+}
+.nav_left a {
+  padding: 10px;
+  margin: 10px 20px;
+  text-decoration: none;
+  border: 1px solid black;
+  background: #11f25f;
+  border-radius: 5px;
+  display: inline-block;
+  width: 100px;
+}
+.nav_left a:hover,
+.nav_left a:focus {
+  background: #a7f5c2;
+  width: 220px;
+  text-align: right;
 }
 .content {
   text-align: justify;
@@ -96,7 +138,7 @@ body {
   height: auto !important;
   display: flex;
   flex-direction: column;
-  background-color: #0eff20;
+  background: #ebeef0;
 }
 /* Middle
 -----------------------------------------------------------------------------*/
@@ -108,7 +150,29 @@ body {
 .container {
   max-width: 1400px;
   margin: 0 auto;
-  background-color: #fff60e;
   flex: auto;
   display: flex;
+}
+.footer {
+  text-align: center;
+}
+@media (max-width: 1000px) {
+  .nav_top {
+    display: flex;
+  }
+  .left-sidebar {
+    display: none;
+  }
+}
+@media (max-width: 700px) {
+  .mobil_menu {
+    display: flex;
+  }
+  .face,
+  .nav_top {
+    display: none;
+  }
+  .header {
+    justify-content: flex-start;
+  }
 }
